<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_video"
        android:icon="@drawable/ic_video"
        android:title="@string/video" />
    <item
        android:id="@+id/nav_audio"
        android:icon="@drawable/ic_menu_audio"
        android:title="@string/audio" />
    <item
        android:id="@+id/nav_directories"
        android:icon="@drawable/ic_folder"
        android:title="@string/browse"
        android:visible="false" />
    <item
        android:id="@+id/nav_playlists"
        android:icon="@drawable/ic_playlist"
        android:title="@string/playlists" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_nav_more"
        android:title="@string/more"
        android:visible="false"/>

</menu>