...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:fitsSystemWindows="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
...
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />



            <com.video.offline.videoplayer.gui.view.HeaderMediaSwitcher
                    android:id="@+id/audio_media_switcher"
                    android:layout_width="0dp"
                    android:layout_height="68dp"
                    android:background="#00000000"
                    app:layout_constraintEnd_toStartOf="@+id/barrier"
                    app:layout_constraintStart_toEndOf="@+id/close_playback"
                    app:layout_constraintTop_toTopOf="parent" />
...
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/search"
                    android:focusable="true"
                    android:onClick="@{fragment::onSearchClick}"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/guideline_header_bottom"
                    app:layout_constraintEnd_toStartOf="@+id/playlist_switch"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search_audio" />

            <ImageView
                    android:id="@+id/playlist_switch"
                    android:layout_width="wrap_content"
...
