<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="option"
                type="com.video.offline.videoplayer.gui.helpers.PlayerOption" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="@dimen/player_option_width"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:focusable="true"
            android:padding="8dp">

        <ImageView
                android:id="@+id/option_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/default_margin"
                app:tint="?attr/font_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/option_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/option_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{option.title}"
                android:textAppearance="@style/VLC.CtxTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/option_icon"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
